--- a/app/views/blog_posts/index.html.slim
+++ b/app/views/blog_posts/index.html.slim
@@ -32,8 +32,11 @@
               .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
               .entry_title
                 p = blog_post.title
-    = link_to "javascript:seeMore('all')", id: "see_more_link"
-      button id='see_more_button' SEE MORE
+    - if @blog_posts.size > 9
+      = link_to "javascript:seeMore('all')", id: "see_more_link"
+        button class='see_more_button' SEE MORE
+    - else
+        button class='see_more_button' style='display: none;' SEE MORE
   #video_container
     .entry_container
       - @video_posts.take(9).each_with_index do |blog_post, index|
@@ -51,8 +54,12 @@
             .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
             .entry_title
               p = blog_post.title
-    = link_to "javascript:seeMore('video')", id: "see_more_link"
-      button id='see_more_button' SEE MORE
+    - if @video_posts.size > 9
+      = link_to "javascript:seeMore('video')", id: "see_more_link"
+        button class='see_more_button' SEE MORE
+    - else
+        button class='see_more_button' style='display: none;' SEE MORE
+
   #article_container
     .entry_container
       - @article_posts.take(9).each_with_index do |blog_post, index|
@@ -69,11 +76,14 @@
             .entry_image style='background-image: url(#{rails_blob_path(blog_post.main_image)})'
             .entry_title
               p = blog_post.title
-    = link_to "javascript:seeMore('article')", id: "see_more_link"
-      button id='see_more_button' SEE MORE
+    - if @article_posts.size > 9
+      = link_to "javascript:seeMore('article')", id: "see_more_link"
+        button class='see_more_button' SEE MORE
+    - else
+        button class='see_more_button' style='display: none;' SEE MORE
 
   #bottom_message
-    p = "If you can't find what you're looking for, or would like to ask a question as a topic for a future article or video, please contact us below, and we'll get back to you as soon as we can."
+    p = "If you can't find what you're looking for, or would like to ask a question as a topic for a future article or video, please contact us below, and we'll get back to you as soon as we can"
 
 
 / td = blog_post.media_type
@@ -90,8 +100,10 @@
 / = paginate @blog_posts
 / = link_to 'New Blog post', new_blog_post_path
 javascript:
+  showAll = false
   function clicked(a) {
     if(a == 'all') {
+      showAll = false
       video_button = document.getElementById('videos_button')
       article_button = document.getElementById('articles_button')
       all_button = document.getElementById('all_media_button')
@@ -109,8 +121,10 @@ javascript:
 
       allMedia = document.getElementById('all_container')
       showDiv(allMedia)
+      changeButton("SEE MORE", "all")
     }
     else if(a == 'articles') {
+      showAll = false
       article_button = document.getElementById('articles_button')
       video_button = document.getElementById('videos_button')
       all_button = document.getElementById('all_media_button')
@@ -129,9 +143,10 @@ javascript:
       articles = document.getElementById('article_container')
       showDiv(articles)
 
-
+      changeButton("SEE MORE", "article")
     }
     else if(a == 'videos') {
+      showAll = false
       video_button = document.getElementById('videos_button')
       article_button = document.getElementById('articles_button')
       all_button = document.getElementById('all_media_button')
@@ -149,6 +164,8 @@ javascript:
 
       videos = document.getElementById('video_container')
       showDiv(videos)
+
+      changeButton("SEE MORE", "video")
     }
 
     function disableButton(button) {
@@ -162,37 +179,80 @@ javascript:
     }
   }
   function seeMore(div) {
-    if(div == 'all') {
-      moreVideoPosts = document.getElementById('video_more_posts')
-      moreArticlePosts = document.getElementById('article_more_posts')
-      hideDiv(moreVideoPosts)
-      hideDiv(moreArticlePosts)
-      moreAllPosts = document.getElementById('all_more_posts')
-      showDiv(moreAllPosts)
+
+    if(!showAll) {
+      showAll = true
+      if(div == 'all') {
+        moreVideoPosts = document.getElementById('video_more_posts')
+        moreArticlePosts = document.getElementById('article_more_posts')
+        hideDiv(moreVideoPosts)
+        hideDiv(moreArticlePosts)
+        moreAllPosts = document.getElementById('all_more_posts')
+        showDiv(moreAllPosts)
+        changeButton("SHOW LESS", "all")
+      }
+      else if(div == 'video') {
+        moreAllPosts = document.getElementById('all_more_posts')
+        moreArticlePosts = document.getElementById('article_more_posts')
+        hideDiv(moreAllPosts)
+        hideDiv(moreArticlePosts)
+        moreVideoPosts = document.getElementById('video_more_posts')
+        showDiv(moreVideoPosts)
+        changeButton("SHOW LESS", "video")
+      }
+      else if(div == 'article') {
+        moreAllPosts = document.getElementById('all_more_posts')
+        moreVideoPosts = document.getElementById('video_more_posts')
+        hideDiv(moreAllPosts)
+        hideDiv(moreVideoPosts)
+        moreArticlePosts = document.getElementById('article_more_posts')
+        showDiv(moreArticlePosts)
+        changeButton("SHOW LESS", "article")
+      }
     }
-    if(div == 'video') {
-      moreAllPosts = document.getElementById('all_more_posts')
-      moreArticlePosts = document.getElementById('article_more_posts')
-      hideDiv(moreAllPosts)
-      hideDiv(moreArticlePosts)
-      moreVideoPosts = document.getElementById('video_more_posts')
-      showDiv(moreVideoPosts)
-    }
-    if(div == 'article') {
-      moreAllPosts = document.getElementById('all_more_posts')
-      moreVideoPosts = document.getElementById('video_more_posts')
-      hideDiv(moreAllPosts)
-      hideDiv(moreVideoPosts)
-      moreArticlePosts = document.getElementById('article_more_posts')
-      showDiv(moreArticlePosts)
+    else {
+      showAll = false
+      if(div == 'all') {
+        moreAllPosts = document.getElementById('all_more_posts')
+        hideDiv(moreAllPosts)
+        changeButton("SEE MORE", "all")
+      }
+      else if(div == 'video') {
+        moreVideoPosts = document.getElementById('video_more_posts')
+        hideDiv(moreVideoPosts)
+        changeButton("SEE MORE", "video")
+      }
+      else if(div == 'article') {
+        moreArticlePosts = document.getElementById('article_more_posts')
+        hideDiv(moreArticlePosts)
+        changeButton("SEE MORE", "article")
+      }
     }
   }
+
+  function changeButton(message, div) {
+    button = document.getElementsByClassName('see_more_button')
+
+    if(div == "all") {
+      button[0].innerHTML = message
+    }
+    else if(div == "video") {
+      button[1].innerHTML = message
+    }
+    else if(div == 'article') {
+      button[2].innerHTML = message
+    }
+
+  }
+
   function showDiv(element) {
     element.style.display = 'block'
   }
+
   function hideDiv(element) {
     element.style.display = 'none'
   }
+
   function hideAllExtras() {
     moreAllPosts = document.getElementById('all_more_posts')
     moreVideoPosts = document.getElementById('video_more_posts')
@@ -200,4 +260,17 @@ javascript:
     hideDiv(moreAllPosts)
     hideDiv(moreVideoPosts)
     hideDiv(moreArticlePosts)
+  }
+
+  function seeLess(div) {
+    if(div == 'all') {
+      moreAllPosts = document.getElementById('all_more_posts')
+      hideDiv(moreAllPosts)
+    }
+    else if(div == 'video') {
+
+    }
+    else if(div == 'article') {
+
+    }
   }
