--- a/app/assets/stylesheets/blog_posts.sass
+++ b/app/assets/stylesheets/blog_posts.sass
@@ -188,7 +188,7 @@ body
           height: 5.5rem
     .video_container
       display: none
-    #see_more_button
+    .see_more_button
       width: 10rem
       height: 3rem
       background-color: black
@@ -198,7 +198,10 @@ body
       margin-top: 3rem
       margin-bottom: 6rem
     #see_more_link
-        background: black
+        background: none
+        background-color: black
+        width: 10rem
+        height: 3rem
         button
           &:hover
             cursor: pointer
@@ -214,6 +217,14 @@ body
   width: 80%
   margin-left: auto
   margin-right: auto
+  @media only screen and (max-width: 1450px)
+    width: 90%
+  @media only screen and (max-width: 1200px)
+    width: 95%
+  @media only screen and (max-width: 1125px)
+    width: 97%
+  @media only screen and (max-width: 1075px)
+    width: 98%
   #bread_crumb
     a
       text-decoration: none
@@ -247,10 +258,18 @@ body
         margin-bottom: 0
 #body-container
   display: grid
-  grid-template-columns: 5fr 2fr
+  grid-template-columns: 3fr 1fr
   width: 80%
   margin-right: auto
   margin-left: auto
+  @media only screen and (max-width: 1450px)
+    width: 90%
+  @media only screen and (max-width: 1200px)
+    width: 95%
+  @media only screen and (max-width: 1125px)
+    width: 97%    
+  @media only screen and (max-width: 1075px)
+    width: 98%
   @media only screen and (max-width: 1050px)
     grid-template-columns: 1fr
   #body-right
@@ -258,6 +277,8 @@ body
       display: none
   #body-right-column
     width: 100%
+    // position: sticky
+    // top: 20px
     .entry_page
       width: 100%
       margin-top: 3rem
@@ -281,7 +302,6 @@ body
 
     #side-bar
       width: 100%
-
       .entry_container
         display: flex
         flex-direction: column
@@ -306,10 +326,11 @@ body
             height: 7rem
         .entry_title
           p
-            font-size: .7vw
+            font-size: 1vw
+            line-height: 20px
             @media only screen and (max-width: 1300px)
               line-height: 14px
-              font-size: 1vw
+              font-size: 1.1vw
 
 
 
@@ -359,16 +380,48 @@ body
 
   #body-left
     width: 100%
-    #video_upload
+    .upload
       iframe
         @media only screen and (max-width: 1450px)
           height: 25rem
         @media only screen and (max-width: 900px)
           height: 18rem
+      img
+        width: 90%
+        height: 32rem
+        @media only screen and (max-width: 1450px)
+          height: 25rem
+        @media only screen and (max-width: 900px)
+          height: 18rem
     #blog_body
+      a
+        text-decoration: none
+        color: $sfs-green
+        &:hover
+          background: none
+          color: $sfs-dark-grey
       strong
         font-size: 2.2rem
         font-family: 'cerapro-bold'
+      figure
+        margin: inherit
+        width: 90%
+        height: 32rem
+        @media only screen and (max-width: 1450px)
+          height: 25rem
+        @media only screen and (max-width: 900px)
+          height: 18rem
+        img
+          width: 100%
+          height: 100%
+        span
+          display: none
+        a
+          cursor: auto
+          &:hover
+            background: none
+
+
     iframe
       width: 90%
       height: 32rem
