--- a/app/views/blog_posts/show.html.slim
+++ b/app/views/blog_posts/show.html.slim
@@ -8,8 +8,11 @@
 #body-container
   #body-left
     - if @blog_post.media_type == 'Video Post'
-      #video_upload
+      .upload
         iframe src= @blog_post.video_upload
+    - else
+      .upload
+        = image_tag(rails_blob_path(@blog_post.main_image))
     #date
       p
         = @blog_post.dateConversion()
