--- a/app/assets/stylesheets/blog_posts.sass
+++ b/app/assets/stylesheets/blog_posts.sass
@@ -1,6 +1,7 @@
 // Place all the styles related to the BlogPosts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 @font-face
   font-family: 'cerapro-regular'
   src: font-url('cerapro-regular-webfont.woff') format('woff')
@@ -17,7 +18,6 @@ $sfs-dark-grey: #929497
 $sfs-white-smoke: #f5f3f3
 
 body
-  font-size: 200px
   .entry_page
     text-align: center
     max-width: 1000px
@@ -47,7 +47,7 @@ body
       margin-bottom: 4rem
       color: black
       line-height: 3rem
-      @media only screen and (max-width: 675px)
+      @media screen and (max-width: 675px)
         font-size: 2.5rem
     .form-container
       width: 100%
@@ -63,19 +63,30 @@ body
           font-size: 1.5rem
           border: none
           text-align: center
+          margin-right: 1rem
         #title
           width: 100%
           height: 3rem
           border-color: black
-          padding-top: .2rem
-          padding-left: 1.75rem
+          line-height: 3rem
         #title::placeholder
             text-align: center
+            height: 3rem
             font-family: 'cerapro-thin'
             font-size: 1.5rem
             padding-left: 1.5rem
             color: black
             letter-spacing: 1px
+            margin-left: auto
+            margin-right: auto
+            @media screen and (max-width: 550px)
+              font-size: 1rem
+            @media screen and (max-width: 375px)
+              font-size: .9rem
+              padding-left: 0
+
+
+
         input[type="image"]
           height: 1.5rem
           margin-right: .5rem
@@ -84,16 +95,18 @@ body
       display: flex
       justify-content: space-between
       margin-bottom: 2.5rem
-      @media only screen and (max-width: 1250px)
+      @media screen and (max-width: 1250px)
         width: 60%
-      @media only screen and (max-width: 1050px)
+      @media screen and (max-width: 1050px)
         width: 70%
-      @media only screen and (max-width: 950px)
+      @media screen and (max-width: 950px)
         width: 80%
-      @media only screen and (max-width: 800px)
+      @media screen and (max-width: 800px)
         width: 95%
-      @media only screen and (max-width: 675px)
+      @media screen and (max-width: 675px)
         width: 98%
+      @media screen and (max-width: 550px)
+        width: 100%
       button
         width: 10rem
         height: 2.5rem
@@ -103,10 +116,26 @@ body
         font-size: 1rem
         letter-spacing: .1rem
         background-color: $sfs-white-smoke
-        @media only screen and (max-width: 650px)
+        @media screen and (max-width: 650px)
           width: 8rem
           height: 2rem
           font-size: .8rem
+        @media screen and (max-width: 550px)
+          width: 7rem
+        @media screen and (max-width: 475px)
+          width: 6rem
+        @media screen and (max-width: 425px)
+          width: 5.5rem
+          height: 2.2rem
+        @media screen and (max-width: 385px)
+          width: 5rem
+          height: 2.5rem
+          font-size: .7rem
+        @media screen and (max-width: 360px)
+          width: 4.5rem
+          font-size: .6rem
+        @media screen and (max-width: 330px)
+          width: 4rem
         &:hover
           transform: scale(1.02)
           color: white
@@ -129,11 +158,13 @@ body
       grid-gap: 30px
       justify-content: space-between
       align-items: center
-      @media only screen and (max-width: 950px)
+      @media screen and (max-width: 950px)
         grid-template-columns: repeat(2, minmax(200px, 45%))
-      @media only screen and (max-width: 700px)
+      @media screen and (max-width: 700px)
         grid-template-columns: repeat(1, minmax(200px, 80%))
         justify-content: center
+      @media screen and (max-width: 575px)
+        grid-template-columns: repeat(1, minmax(200px, 100%))
       a
         text-decoration: none
         &:hover
@@ -152,14 +183,19 @@ body
           width: 100%
           height: 10rem
           background-size: cover
-          @media only screen and (max-width: 1050px)
+          @media screen and (max-width: 1050px)
             height: 9rem
-          @media only screen and (max-width: 950px)
+          @media screen and (max-width: 950px)
             height: 12rem
-          @media only screen and (max-width: 950px)
+          @media screen and (max-width: 950px)
             height: 10rem
-          @media only screen and (max-width: 700px)
+          @media screen and (max-width: 700px)
             height: 15rem
+          @media screen and (max-width: 500px)
+            height: 12rem
+          @media screen and (max-width: 400px)
+            height: 10rem
+
         .entry_title
           height: 50px
           margin-left: .75rem
@@ -167,19 +203,22 @@ body
           display: flex
           align-items: center
           color: black
-
           p
             text-align: left
             font-family: 'cerapro-regular'
             font-size: 1rem
-            @media only screen and (max-width: 1250px)
+            @media screen and (max-width: 1250px)
               font-size: .8rem
-            @media only screen and (max-width: 1050px)
+            @media screen and (max-width: 1050px)
               font-size: .74rem
-            @media only screen and (max-width: 950px)
+            @media screen and (max-width: 950px)
               font-size: .8rem
-            @media only screen and (max-width: 700px)
+            @media screen and (max-width: 700px)
               font-size: 1rem
+            @media screen and (max-width: 425px)
+              font-size: .9rem
+            @media screen and (max-width: 360px)
+              font-size: .8rem
         input
           position: absolute
           width: 100%
@@ -217,14 +256,18 @@ body
   width: 80%
   margin-left: auto
   margin-right: auto
-  @media only screen and (max-width: 1450px)
+  @media screen and (max-width: 825px)
+
+  @media screen and (max-width: 1450px)
     width: 90%
-  @media only screen and (max-width: 1200px)
+  @media screen and (max-width: 1200px)
     width: 95%
-  @media only screen and (max-width: 1125px)
+  @media screen and (max-width: 1125px)
     width: 97%
-  @media only screen and (max-width: 1075px)
+  @media screen and (max-width: 1075px)
     width: 98%
+  @media screen and (max-width: 1050px)
+    width: 80%
   #bread_crumb
     a
       text-decoration: none
@@ -233,6 +276,12 @@ body
       color: black
       font-size: 1.1rem
       background-color: white
+      @media screen and (max-width: 775px)
+        font-size: 1rem
+      @media screen and (max-width: 675px)
+        font-size: .8rem
+      @media screen and (max-width: 525px)
+        font-size: .6rem
       &:first-child
         color: $sfs-dark-grey
       &:hover
@@ -248,39 +297,57 @@ body
     margin-left: auto
 
     #title
-      width: 80%
+      width: 70%
       height: auto
       align-self: flex-end
+
+      @media screen and (max-width: 1050px)
+        width: 90%
+      @media screen and (max-width: 625px)
+        width: 95%
+      @media screen and (max-width: 550px)
+        width: 100%
+
       p
         font-family: 'cerapro-regular'
         font-size: 3.5rem
         line-height: 4rem
         margin-bottom: 0
+        @media screen and (max-width: 775px)
+          font-size: 3rem
+        @media screen and (max-width: 675px)
+          font-size: 2.5rem
+          line-height: 3rem
+        @media screen and (max-width: 525px)
+          font-size: 2rem
 #body-container
   display: grid
   grid-template-columns: 3fr 1fr
   width: 80%
   margin-right: auto
   margin-left: auto
-  @media only screen and (max-width: 1450px)
+  @media screen and (max-width: 1450px)
     width: 90%
-  @media only screen and (max-width: 1200px)
+  @media screen and (max-width: 1200px)
     width: 95%
-  @media only screen and (max-width: 1125px)
-    width: 97%    
-  @media only screen and (max-width: 1075px)
+  @media screen and (max-width: 1125px)
+    width: 97%
+  @media screen and (max-width: 1075px)
     width: 98%
-  @media only screen and (max-width: 1050px)
-    grid-template-columns: 1fr
+  @media screen and (max-width: 1050px)
+    grid-template-columns: 80%
+    justify-content: center
+
+
   #body-right
-    @media only screen and (max-width: 1050px)
+    @media screen and (max-width: 1050px)
       display: none
   #body-right-column
     width: 100%
-    // position: sticky
-    // top: 20px
+    height: 100%
     .entry_page
       width: 100%
+      height: 100%
       margin-top: 3rem
     #text-box
       align-self: flex-end
@@ -293,7 +360,7 @@ body
       p
         height: 100%
         font-family: 'cerapro-bold'
-        font-size: 1vw
+        font-size: 1rem
         letter-spacing: 1px
         text-align: center
         margin: 0
@@ -310,66 +377,78 @@ body
           width: 100%
           margin-bottom: 2rem
         p
-          font-size: .68vw
+          font-size: .68rem
         .entry_image
           height: 12rem
-          @media only screen and (max-width: 1300px)
+          @media screen and (max-width: 1300px)
             height: 9rem
             grid-template-columns: 5fr 1fr
-          @media only screen and (max-width: 1200px)
+          @media screen and (max-width: 1200px)
             height: 10rem
             grid-template-columns: 5fr 1fr
-          @media only screen and (max-width: 1100px)
+          @media screen and (max-width: 1100px)
             height: 8rem
             grid-template-columns: 5fr 1fr
-          @media only screen and (max-width: 900px)
+          @media screen and (max-width: 900px)
             height: 7rem
+
         .entry_title
           p
-            font-size: 1vw
+            font-size: .9rem
             line-height: 20px
-            @media only screen and (max-width: 1300px)
+            @media screen and (max-width: 1300px)
               line-height: 14px
-              font-size: 1.1vw
+              font-size: .8rem
 
 
 
 
-      #questions-box
-        background-color: $sfs-green
-        display: flex
-        flex-direction: column
-        justify-content: center
-        height: 25rem
-        align-items: center
+    #questions-box
+      background-color: $sfs-green
+      display: flex
+      flex-direction: column
+      justify-content: center
+      height: 25rem
+      align-items: center
+      width: 100%
+      margin: none
+      position: sticky
+      top: 5%
+      #questions-content
         width: 100%
-        margin: none
-        #questions-content
-          width: 100%
-          height: 95%
-          display: flex
-          flex-direction: column
-          justify-content: space-around
-          align-items: center
-          p
-            font-family: 'cerapro-regular'
-            color: white
-            font-size: 2.5vw
-            text-align: center
-            line-height: 3rem
-            margin-top: 0
-            @media only screen and (min-width: 1428px)
-              font-size: 2.6vw
-            @media only screen and (max-width: 1200px)
-              line-height: 2rem
-          button
-            width: 10vw
-            height: 3vw
-            background-color: black
-            color: white
-            font-family: 'cerapro-regular'
-            border: none
-            letter-spacing: 1px
+        height: 95%
+        display: grid
+        grid-template-rows: 1fr 1fr 1fr
+        align-items: center
+        p
+          font-family: 'cerapro-regular'
+          color: white
+          font-size: 2.2rem
+          text-align: center
+          line-height: 3rem
+          margin-top: 0
+          margin-bottom: 0
+          @media screen and (max-width: 1450px)
+              font-size: 2.2rem
+              padding: 10px
+          @media screen and (max-width: 1200px)
+            line-height: 2.5rem
+            padding: 10px
+        a
+          &:hover
+            background: none
+        button
+          width: 10rem
+          height: 3rem
+          background-color: black
+          color: white
+          font-family: 'cerapro-regular'
+          border: none
+          letter-spacing: 1px
+          font-size: .9rem
+          align-self: center
+          &:hover
+            cursor: pointer
 
 
 
@@ -381,22 +460,44 @@ body
   #body-left
     width: 100%
     .upload
+      width: 95%
       iframe
-        @media only screen and (max-width: 1450px)
-          height: 25rem
-        @media only screen and (max-width: 900px)
-          height: 18rem
-      img
-        width: 90%
+        width: 100%
         height: 32rem
-        @media only screen and (max-width: 1450px)
+        @media screen and (max-width: 950px)
           height: 25rem
-        @media only screen and (max-width: 900px)
-          height: 18rem
+        @media screen and (max-width: 750px)
+          height: 20rem
+        @media screen and (max-width: 650px)
+          height: 15rem
+        @media screen and (max-width: 475px)
+          height: 12rem
+        @media screen and (max-width: 365px)
+          height: 10rem
+      img
+        width: 100%
+        height: 32rem
+        @media screen and (max-width: 1450px)
+          height: 25rem
+        @media screen and (max-width: 700px)
+          height: 20rem
+        @media screen and (max-width: 650px)
+          height: 15rem
+        @media screen and (max-width: 475px)
+          height: 12rem
+        @media screen and (max-width: 365px)
+          height: 10rem
     #blog_body
+      width: 100%
+      ol
+        font-family: 'cerapro-regular'
+        font-size: 1.2rem
+        line-height: 2rem
+        padding: 40px
       a
         text-decoration: none
         color: $sfs-green
+        overflow-wrap: break-word
         &:hover
           background: none
           color: $sfs-dark-grey
@@ -405,15 +506,21 @@ body
         font-family: 'cerapro-bold'
       figure
         margin: inherit
-        width: 90%
+        width: 100%
         height: 32rem
-        @media only screen and (max-width: 1450px)
+        @media screen and (max-width: 1450px)
           height: 25rem
-        @media only screen and (max-width: 900px)
+        @media screen and (max-width: 900px)
           height: 18rem
         img
           width: 100%
           height: 100%
+          @media screen and (max-width: 650px)
+            height: 15rem
+          @media screen and (max-width: 475px)
+            height: 12rem
+          @media screen and (max-width: 365px)
+            height: 10rem
         span
           display: none
         a
@@ -440,8 +547,16 @@ body
         font-family: 'cerapro-bold'
         font-size: 1.25rem
         letter-spacing: 1px
+        @media screen and (max-width: 675px)
+          font-size: 1rem
+        @media screen and (max-width: 525px)
+          font-size: .8rem
     #author
       p
         font-family: 'cerapro-regular'
         font-size: 2rem
         color: $sfs-green
+        @media screen and (max-width: 675px)
+          font-size: 1.5rem
+        @media screen and (max-width: 525px)
+          font-size: 1.3rem
