--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,13 @@
 body {
   background-color: #fff;
   color: #333;
-  margin: 33px;
+  margin-top: 33px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+  max-width: 1500px;
 }
 
 p, ol, ul, td {
